Store all data in single Array. Other changes:
Use id instead of class. Move scrip to end of a body.
Longest menu item reduced. Fully ES6 notation provided

--- a/submissions/Roman-Halenko/js-dom/css/style.css
+++ b/submissions/Roman-Halenko/js-dom/css/style.css
@@ -1,4 +1,4 @@
-html {
+#btn-menuhtml {
   height: 100%;
 }
 
@@ -58,7 +58,7 @@ main {
   flex-basis: 80%;
 }
 
-span.btn-menu {
+span#btn-menu {
   display: none;
 }
 
@@ -76,7 +76,7 @@ span.btn-menu {
     flex-basis: 100%;
   }
 
-  span.btn-menu {
+  span#btn-menu {
     box-sizing: border-box;
     display: flex;
     position: absolute;
@@ -112,7 +112,7 @@ span.btn-menu {
   border-right:10px solid white;
 }
 
-.btn-menu::before, .btn-menu::after {
+#btn-menu::before, #btn-menu::after {
   content: "";
   border-top: 3px solid #ffffff;
   width: 80%;
@@ -122,11 +122,11 @@ span.btn-menu {
   border-radius: 1px;
 }
 
-.btn-menu::before {
+#btn-menu::before {
   top: 6px;
 }
 
-.btn-menu::after {
+#btn-menu::after {
   top: 13px;
 }
 
