Refactoring: single event listener for li's parent

--- a/submissions/Roman-Halenko/js-dom/css/style.css
+++ b/submissions/Roman-Halenko/js-dom/css/style.css
@@ -20,17 +20,14 @@ li {
   list-style: none;
   margin-top: 8px;
   text-align: right;
-}
-
-a {
-  text-decoration: none;
   color: #fffef6;
   font-size: 24px;
   transition: 0.2s ease;
   font-weight: 200;
+  cursor: pointer;
 }
 
-a:hover {
+li:hover {
   color: #1e3d46;
 }
 
