Added second part of tasks

--- a/submissions/justdevway/friends-app/css/main.css
+++ b/submissions/justdevway/friends-app/css/main.css
@@ -283,6 +283,11 @@ body {
     color: var(--selection);
 }
 
+.card__registration {
+    font-size: 12px;
+    font-style: italic;
+}
+
 .modal {
     position: fixed;
     top: 0;
