--- a/submissions/denislukianenko/memory-pair-game/style.css
+++ b/submissions/denislukianenko/memory-pair-game/style.css
@@ -126,7 +126,7 @@ h1 {
   max-height: 70px;
 }
 
-#modal {
+.modal {
   margin-top: -28px;
   position: fixed;
   width: 100vw;
@@ -134,17 +134,15 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  display: none;
   background-color: hsla(0, 0%, 100%, 0.8);
   animation: fadeIn both 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-.modal {
-  display: none;
 }
 .modal-isActive {
   display: flex;
 }
 
-#modal > button {
+.modal > button {
   background-color: lightblue;
   border: none;
   border-radius: 10px;
@@ -153,7 +151,7 @@ h1 {
   transition: 150ms;
 }
 
-#modal > button:hover {
+.modal > button:hover {
   transform: translateY(-5px);
   box-shadow: 0 10px 15px -10px hsl(195, 33%, 50%);
 }
