--- a/submissions/alexdefender/js-dom-side-menu/css/style.css
+++ b/submissions/alexdefender/js-dom-side-menu/css/style.css
@@ -1,13 +1,3 @@
-@media screen and (min-width: 300px) {
-    .menu {
-        width: 25%;
-    }
-
-    .content {
-        width: 50%;
-    }
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -41,17 +31,39 @@
     cursor: pointer;
 }
 
-.content {
+#content {
     padding: 20px 20px 20px 20px;
 }
 
-.content img {
+.content .img-content {
     width: 200px;
     float: right;
     margin: 7px 0 7px 7px;
 }
 
+.content-style {
+    border: solid;
+    border-color: burlywood;
+    margin: 10px 20px 20px 10px;
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 p {
     margin-top: 0.5em; /* Отступ сверху */
     margin-bottom: 1em; /* Отступ снизу */
+}
+
+@media screen and (min-width: 300px) {
+    .menu {
+        width: 25%;
+    }
+
+    .content {
+        width: 50%;
+    }
 }
