--- a/submissions/maxovsanyuk/Friends-App/css/main.css
+++ b/submissions/maxovsanyuk/Friends-App/css/main.css
@@ -10,8 +10,10 @@ body {
   font-family: 'Karma', serif;
   font-size: 12px;
   overflow-x: hidden; }
+  body h3 {
+    font-size: 13px; }
 
-header {
+.header {
   width: 100%;
   height: 50px;
   display: flex;
@@ -20,7 +22,7 @@ header {
   background: #323a38;
   position: fixed;
   z-index: 9999; }
-  header p {
+  .header h2 {
     font-family: 'Major Mono Display', monospace;
     font-size: 28px;
     color: #048dba; }
@@ -44,21 +46,20 @@ aside {
   height: 80%;
   background: #323a38;
   transition: .5s;
-  position: relative;
+  position: absolute;
   z-index: 999;
   border-top-right-radius: 50px 50%;
   border-bottom-right-radius: 50px 50%;
   position: fixed;
   top: 15%; }
 
-.aside-cklick {
+.aside-click {
   width: 240px;
   display: flex;
   justify-content: center;
   background: rgba(35, 49, 51, 0.95);
   border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  position: relative; }
+  border-bottom-right-radius: 10px; }
 
 .search-input {
   display: block;
@@ -77,7 +78,7 @@ aside {
   width: 15px;
   height: 15px;
   position: absolute;
-  top: 56px;
+  top: 45px;
   right: 42px; }
 
 .new-year {
@@ -171,18 +172,15 @@ aside {
   align-content: flex-start;
   flex-wrap: wrap;
   overflow-x: scroll;
-  position: absolute;
+  margin-top: 50px;
   padding: 30px 0 0 120px;
-  top: 50px;
   border: 1px solid #444343;
   overflow: scroll;
   animation: background 8s infinite linear; }
   .content__human {
     width: 180px;
-    max-width: 180px;
     min-width: 180px;
     min-height: 255px;
-    max-height: 255px;
     margin: 20px 40px 20px 0;
     border-radius: 10px;
     box-shadow: -1px 2px 24px 0px rgba(0, 0, 0, 0.75);
@@ -205,14 +203,14 @@ aside {
   height: 30px;
   background: #4c6383;
   color: #eff5f3;
-  font-size: 14px;
+  font-size: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative; }
 
 .female {
-  background: #a06363 !important; }
+  background: #a06363; }
 
 .user-remove {
   width: 15%;
@@ -220,7 +218,7 @@ aside {
   position: absolute;
   top: -1px;
   right: 5px;
-  background: url(../img/close.png) no-repeat center;
+  background: url(/img/close.png) no-repeat center;
   background-size: 10px 10px;
   cursor: pointer; }
   .user-remove:hover {
