--- a/submissions/nazmariam/memory-pair-game/css/style.css
+++ b/submissions/nazmariam/memory-pair-game/css/style.css
@@ -67,6 +67,7 @@ body{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+	overflow: hidden;
 }
 .back img {
 	display: block;
@@ -83,4 +84,13 @@ body{
 }
 .main h1.winner{
 	opacity: 1;
+}
+@media  (max-width: 720px) {
+	.flip-container, .front, .back {
+		width: 80px;
+		height: 120px;
+	}
+	.main h1{
+		font-size: 40px;
+	}
 }
