--- a/submissions/AnnGrynchuk/js_dom/style.css
+++ b/submissions/AnnGrynchuk/js_dom/style.css
@@ -19,8 +19,7 @@ html {
     display: flex;
     height: 100%;
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    margin:0 auto;
   }
   
   .side_menu_list {
