--- a/submissions/olek557/memory-pair-game/style.css
+++ b/submissions/olek557/memory-pair-game/style.css
@@ -9,16 +9,25 @@
   flex-wrap: wrap;
 }
 .card__wrapper {
-  cursor: pointer;
   perspective: 500px;
   width: calc(100% / 4 - 20px);
   margin: 10px;
 }
 
 .card__wrapper.open .card,
-.card__wrapper.fixed .card {
+.card__wrapper.hide .card {
   transform: rotateY(180deg);
 }
+
+.card__wrapper.hide .card {
+  opacity: 0;
+  cursor: default;
+}
+
+.card__wrapper.hide .card__front {
+  background: white;
+}
+
 
 .card__front, .card__back, .card {
   width: 100%;
@@ -26,15 +35,14 @@
   border-radius: 5px;
 }
 
-/* flip speed goes here */
 .card {
+  cursor: pointer;
   transition: 0.6s;
   transform-style: preserve-3d;
   position: relative;
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.3)
 }
 
-/* hide back of pane during swap */
 .card__front, .card__back {
   backface-visibility: hidden;
   position: absolute;
@@ -42,7 +50,6 @@
   left: 0;
 }
 
-/* card__front pane, placed above back */
 .card__front {
   z-index: 2;
   /* for firefox 31 */
@@ -50,7 +57,6 @@
   background-image: url(./morocco-blue.png);
 }
 
-/* back, initially hidden pane */
 .card__back {
   font-size: 100px;
   text-align: center;
