--- a/submissions/nataliereshetnikova/js-dom/style.css
+++ b/submissions/nataliereshetnikova/js-dom/style.css
@@ -7,7 +7,9 @@
       body {
         font-family: 'Roboto', sans-serif;
       }
-
+      li{
+        cursor: pointer;
+      }
       a{
       text-decoration:none;
       color: white;
@@ -25,7 +27,6 @@
         background-image: url("https://images.unsplash.com/photo-1457280468258-28589fb67a93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
         color: white;
         text-align: center;
-        font-size: 3em;
       }
       /*
       These are the responsive styles. Throw some breakpoints in here!
