--- a/submissions/OlgaDubynka/memory-pair-game/main.css
+++ b/submissions/OlgaDubynka/memory-pair-game/main.css
@@ -20,6 +20,8 @@ body {
   height: 650px;
   flex-wrap: wrap;
   perspective: 1200px;
+  -webkit-perspective: 1200px;
+  -moz-perspective: 1200px;
 }
 
 .game-card {
@@ -28,8 +30,14 @@ body {
   height: calc(25% - 10px);
   position: relative;
   transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
   transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
   transition: transform .5s;
+  -webkit-transition: transform .5s;
+  -moz-transition: transform .5s;
   border-radius: 5px;
 }
 
@@ -39,6 +47,8 @@ body {
 
 .game-card.flip {
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateX(180deg);
 }
 
 .front-side,
@@ -50,10 +60,14 @@ body {
   border-radius: 5px;
   background: #fff;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
 }
 
 .front-side {
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateX(180deg);
 }
 
 .back-side {
